# news-headline-grouping

./: .env.example  .gitignore  README.md  breaking_model.py  breaking_news_queue.sql  main.py  main.sh  pyproject.toml  scrape_all_news.py
prompts/: prompt_v2.py
scrappers/: chrome_driver.py  detector.py  scrape_channel24.py  scrape_independent.py  scrape_jamuna.py  scrape_somoy.py
test/: query_db.py  test_breaking_news.py
updated_db_created_time/: .env.dep  .env.test  README.md  detected_breaking_news.txt  is_break.py  main.py  main.sh  migrate_db.py  pyproject.toml  save_model.py  test_breaking_news.py
updated_db_created_time/scrappers/: chrome_driver.py  scrape_independent.py  scrape_jamuna.py  scrape_somoy.py
updated_db_created_time/utils/: db.py  news_detector.py  send_breaking_news.py  send_message.py
utils/: db.py  filter_similar_news.py  helper.py  news_detector.py  query_db.py  send_message.py  sendwhatsapp_func.py
